Add shebang line